Fixed layout issue

--- a/public/css/themecss/custom.css
+++ b/public/css/themecss/custom.css
@@ -30,3 +30,6 @@
 .search-result-area .media-heading {
 	margin-bottom: 0;
 }
+.content-wrapper {
+	height: 100vh;
+}
